# spd-seed-analyzer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  mise.toml  package.json  tsconfig.base.json
.github/: FUNDING.yml
crates/spd-core/: Cargo.toml
crates/spd-core/examples/: dump_seed.rs
crates/spd-core/src/: dungeon_seed.rs  geom.rs  java_random.rs  lib.rs  random.rs  report.rs  run.rs  search.rs
crates/spd-core/src/builders/: connection.rs  figure_eight.rs  loop_builder.rs  mod.rs  place.rs  regular.rs
crates/spd-core/src/dungeon/: hero_inventory.rs  limited_drops.rs  mod.rs
crates/spd-core/src/generator/: categories.rs  mod.rs  state.rs  tests.rs
crates/spd-core/src/generator/tests/: rollover.rs
crates/spd-core/src/items/: catalog.rs  enchants.rs  identities.rs  mod.rs  model.rs  randomize.rs  status_handler.rs
crates/spd-core/src/level/: build.rs  create_items.rs  create_mobs.rs  map_facts.rs  maze.rs  mod.rs  patch.rs  shop.rs  special_loot.rs  state.rs  terrain.rs
crates/spd-core/src/level/create_items/: tests.rs
crates/spd-core/src/level/create_mobs/: navigation.rs  rotation.rs  tests.rs
crates/spd-core/src/quests/: blacksmith.rs  ghost.rs  imp.rs  mod.rs  wandmaker.rs
crates/spd-core/src/rooms/: dimensions.rs  init_rooms.rs  mod.rs  room.rs  secret.rs  special.rs  standard.rs  types.rs
crates/spd-core/src/search/: tests.rs
crates/spd-core/tests/: java_oracle_goldens.rs
crates/spd-core/tests/java_oracle_goldens/: final_heaps.rs  pool.rs  toxic_gas.rs
crates/spd-wasm/: Cargo.toml
crates/spd-wasm/src/: lib.rs
(+218 files in other folders)
