[workspace]
resolver = "2"
members = [
    "crates/spd-core",
    "crates/spd-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/NerdCoder/spd-seed-analyzer"

[workspace.dependencies]
spd-core = { path = "crates/spd-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
