[package]
name = "spd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless Shattered Pixel Dungeon seed analysis (pure Rust)"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
